유저 가입 시 가입일 저장, 유저 댓글 조회 버그 수정